@@ -1,0 +1,4 @@
+This module only contains the BoilerPipeContentHandler.  The boilerpipe dependency is no 
+longer maintained and contains clashes with NekoHTML.
+
+In Tika 3.x, we should rename this module to tika-handler-boilerpipe or similar.
