@@ -80,7 +80,6 @@ import org.apache.tika.sax.BasicContentHandlerFactory;
 import org.apache.tika.sax.BodyContentHandler;
 import org.apache.tika.sax.LinkContentHandler;
 import org.apache.tika.sax.TeeContentHandler;
-import org.apache.tika.sax.boilerpipe.BoilerpipeContentHandler;
 
 public class HtmlParserTest extends TikaTest {
 
@@ -413,28 +412,6 @@ public class HtmlParserTest extends TikaTest {
     }
 
     /**
-     * Test case for TIKA-420
-     *
-     * @see <a href="https://issues.apache.org/jira/browse/TIKA-420">TIKA-420</a>
-     */
-    @Test
-    public void testBoilerplateRemoval() throws Exception {
-        String path = "/test-documents/boilerplate.html";
-
-        Metadata metadata = new Metadata();
-        BodyContentHandler handler = new BodyContentHandler();
-        new HtmlParser()
-                .parse(getResourceAsStream(path), new BoilerpipeContentHandler(handler), metadata,
-                        new ParseContext());
-
-        String content = handler.toString();
-        assertTrue(content.startsWith("This is the real meat"));
-        assertTrue(content.endsWith("This is the end of the text.\n"));
-        assertFalse(content.contains("boilerplate"));
-        assertFalse(content.contains("footer"));
-    }
-
-    /**
      * Test case for TIKA-478. Don't emit <head> sub-elements inside of <body>.
      *
      * @see <a href="https://issues.apache.org/jira/browse/TIKA-478">TIKA-478</a>
@@ -741,33 +718,6 @@ public class HtmlParserTest extends TikaTest {
     }
 
     /**
-     * Test case for TIKA-564. Support returning markup from BoilerpipeContentHandler.
-     *
-     * @see <a href="https://issues.apache.org/jira/browse/TIKA-564">TIKA-564</a>
-     */
-    @Test
-    public void testBoilerplateWithMarkup() throws Exception {
-        String path = "/test-documents/boilerplate.html";
-
-        Metadata metadata = new Metadata();
-        StringWriter sw = new StringWriter();
-        ContentHandler ch = makeHtmlTransformer(sw);
-        BoilerpipeContentHandler bpch = new BoilerpipeContentHandler(ch);
-        bpch.setIncludeMarkup(true);
-
-        new HtmlParser().parse(getResourceAsStream(path), bpch, metadata, new ParseContext());
-
-        String content = sw.toString();
-        assertTrue(content.contains("<body><table><tr><td><table><tr><td>"),
-                "Has empty table elements");
-        assertTrue(content.contains("<a shape=\"rect\" href=\"Main.php\"/>"), "Has empty a element");
-        assertTrue(content.contains("<p>This is the real meat"), "Has real content");
-        assertTrue(content.endsWith("</p></body></html>"), "Ends with appropriate HTML");
-        assertFalse(content.contains("boilerplate"));
-        assertFalse(content.contains("footer"));
-    }
-
-    /**
      * Test case for TIKA-434 - Pushback buffer overflow in TagSoup
      */
     @Test
@@ -841,61 +791,6 @@ public class HtmlParserTest extends TikaTest {
         assertEquals("fr", metadata.get(Metadata.CONTENT_LANGUAGE));
         assertTrue(Pattern.matches("(?s)<html[^>]* lang=\"fr\".*", sw.toString()),
                 "Missing HTML lang attribute");
-    }
-
-    /**
-     * Test case for TIKA-961
-     *
-     * @see <a href="https://issues.apache.org/jira/browse/TIKA-961">TIKA-961</a>
-     */
-    @Test
-    public void testBoilerplateWhitespace() throws Exception {
-        String path = "/test-documents/boilerplate-whitespace.html";
-
-        Metadata metadata = new Metadata();
-        BodyContentHandler handler = new BodyContentHandler();
-
-        BoilerpipeContentHandler bpHandler = new BoilerpipeContentHandler(handler);
-        bpHandler.setIncludeMarkup(true);
-
-        new HtmlParser().parse(getResourceAsStream(path), bpHandler, metadata, new ParseContext());
-
-        String content = handler.toString();
-
-        // Should not contain item_aitem_b
-        assertFalse(content.contains("item_aitem_b"));
-
-        // Should contain the two list items with a newline in between.
-        assertContains("item_a\nitem_b", content);
-
-        // Should contain 有什么需要我帮你的 (can i help you) without whitespace
-        assertContains("有什么需要我帮你的", content);
-    }
-
-    /**
-     * Test case for TIKA-2683
-     *
-     * @see <a href="https://issues.apache.org/jira/projects/TIKA/issues/TIKA-2683">TIKA-2683</a>
-     */
-    @Test
-    public void testBoilerplateMissingWhitespace() throws Exception {
-        String path = "/test-documents/testBoilerplateMissingSpace.html";
-
-        Metadata metadata = new Metadata();
-        BodyContentHandler handler = new BodyContentHandler();
-
-        BoilerpipeContentHandler bpHandler = new BoilerpipeContentHandler(handler);
-        bpHandler.setIncludeMarkup(true);
-
-        new HtmlParser().parse(getResourceAsStream(path), bpHandler, metadata, new ParseContext());
-
-        String content = handler.toString();
-
-        // Should contain space between these two words as mentioned in HTML
-        assertContains("family Psychrolutidae", content);
-
-        // Shouldn't add new-line chars around brackets; This is not how the HTML look
-        assertContains("(Psychrolutes marcidus)", content);
     }
 
     /**
